2010-05-17 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Fix typo.

	* src/core/na-core-utils.c (na_core_utils_slist_from_array):
	Strip the strings extracted from the array.

	* src/core/na-factory-object.c (na_factory_object_are_equal):
	Dump the data when different.

	* src/nact/nact-main-menubar-file.c
	(nact_main_menubar_file_save_items): Add a debug message.

	* src/api/na-object-api.h (na_object_set_last_version):
	* src/api/na-object-action.h:
	* src/core/na-object-action.c (na_object_action_set_last_version):
	New functions.

	* src/core/na-object-action.c (convert_pre_v2_action):
	Reset action to last version number after conversion from pre-v2.

	* src/core/na-object-profile.c (na_object_profile_parse_parameters):
	Do not add extraneous blanks when parsing parameters.

	* configure.ac: Post release bump version number.

	* src/io-desktop/nadp-reader.c (read_done_load_profiles):
	Do not reload already loaded profiles.
	Just ignore non-referenced profiles.

	* src/io-gconf/nagp-reader.c
	(read_done_action_load_profiles_from_list): Do not reload already loaded profiles.

	* src/utils/nautilus-actions-new.c:
	Factorize error message to make translation easier.

	* src/utils/nautilus-actions-run.c:
	Mark two new strings for translation.

2010-04-14 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Update before release.

	* configure.ac: Bump version number before release.

	* src/core/na-selected-info.h:
	* src/core/na-selected-info.c (na_selected_info_get_name):
	Renamed as na_selected_info_get_path.

	* src/core/na-icontext.c
	(is_current_folder_inside, is_target_selection_candidate):
	Updated accordingly.

	* src/core/na-object-profile.c (na_object_profile_parse_parameters):
	Do not try to deal with null values.

	* src/plugin-menu/nautilus-actions.c (create_item_from_profile):
	Duplicate the candidate profile, set the parent to null.

	* src/core/na-selected-info.c (na_selected_info_get_location):