@@ -250,8 +250,9 @@ na_iabout_get_copyright( gboolean console )
 	symbol = g_strdup( console ? "(C)" : "\xc2\xa9");
 
 	copyright = g_strdup_printf(
-			_( "Copyright %s 2005-2007 Frederic Ruaudel <grumz@grumz.net>\n"
-				"Copyright %s 2009, 2010 Pierre Wieser <pwieser@trychlos.org>" ), symbol, symbol );
+			_( "Copyright %s 2005 The GNOME Foundation\n"
+				"Copyright %s 2006, 2007, 2008 Frederic Ruaudel <grumz@grumz.net>\n"
+				"Copyright %s 2009, 2010 Pierre Wieser <pwieser@trychlos.org>" ), symbol, symbol, symbol );
 
 	g_free( symbol );
 
